bug sheet fixes

--- a/chat.html
+++ b/chat.html
@@ -502,8 +502,8 @@
                                     <!-- next person in chat -->
 
                                     <div class="row py-3">
-                                        <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
-                                            <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                        <div class="mx-2 align-self-end">
+                                            <div class="profile_img_in_chat-s">
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                             </div>
                                         </div>
@@ -511,7 +511,7 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
                                             </p>
                                         </div>
-                                        <div class="col-6 align-self-end text-right">
+                                        <div class="col-xl-6 col-lg-5 px-0 align-self-end text-right">
                                             <div class="dropdown">
                                                 <a type="" class="text-dark" role="button" data-toggle="dropdown">
                                                     <i class="fa fa-ellipsis-v"></i>
@@ -532,8 +532,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
-                                            <span class="ft_11px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 PM</span>
+                                        <div class="col-xl-8 col-lg-8 col-md-8 col-8 mx-5 px-0">
+                                            <span class="ft_11px-s"> 12:43 PM</span>
                                         </div>
                                     </div>
                                     <!-- next person in chat -->
@@ -541,26 +541,27 @@
                                     <!-- first person in chat -->
 
                                     <div class="row py-3 justify-content-end">
-                                        <div class="col-7 col-xl-5 col-lg-6 col-md-5 mr-2 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
+                                        <div class="col-7 col-xl-5 col-lg-6 col-md-5 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
                                             </p>
                                         </div>
-                                        <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
-                                            <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                        <div class="ml-2 mr-3 align-self-end">
+                                            <div class="profile_img_in_chat-s">
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                             </div>
                                         </div>
 
-                                        <div class="col-12 mr-xl-5 pr-xl-5 mr-lg-5 text-right">
+                                        <div class="col-12 mr-xl-5 mr-lg-5 text-right">
                                             <span class="ft_11px-s"> 12:43 AM</span>
                                         </div>
                                     </div>
                                     <!-- first person in chat -->
                                     <!-- next person in chat -->
 
+
                                     <div class="row py-3">
-                                        <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
-                                            <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                        <div class="mx-2 align-self-end">
+                                            <div class="profile_img_in_chat-s">
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                             </div>
                                         </div>
@@ -568,7 +569,7 @@
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
                                             </p>
                                         </div>
-                                        <div class="col-6 align-self-end text-right">
+                                        <div class="col-xl-6 col-lg-5 px-0 align-self-end text-right">
                                             <div class="dropdown">
                                                 <a type="" class="text-dark" role="button" data-toggle="dropdown">
                                                     <i class="fa fa-ellipsis-v"></i>
@@ -589,9 +590,8 @@
                                                 </div>
                                             </div>
                                         </div>
-
-                                        <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
-                                            <span class="ft_11px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 PM</span>
+                                        <div class="col-xl-8 col-lg-8 col-md-8 col-8 mx-5 px-0">
+                                            <span class="ft_11px-s"> 12:43 PM</span>
                                         </div>
                                     </div>
                                     <!-- next person in chat -->
@@ -599,7 +599,7 @@
                                     <!-- first person in chat -->
 
                                     <div class="row py-3 justify-content-end">
-                                        <div class="col-7 col-xl-5 col-lg-6 col-md-5 mr-2 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
+                                        <div class="col-7 col-xl-5 col-lg-6 col-md-5 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
                                             <div class="row">
                                                 <div class="col px-3 mx-3 mt-2 pt-2 bg-white br_5px-s">
                                                     <strong class="ft_14px-s fg_green-s">Thamer</strong><span class="text-dark float-right">12:15 PM</span>
@@ -609,13 +609,13 @@
                                             <p class="mt-2">Lorem ipsum dolor sit amet,
                                             </p>
                                         </div>
-                                        <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
-                                            <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                        <div class="ml-2 mr-3 align-self-end">
+                                            <div class="profile_img_in_chat-s">
                                                 <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                             </div>
                                         </div>
 
-                                        <div class="col-12 mr-xl-5 pr-xl-5 mr-lg-5 text-right">
+                                        <div class="col-12 mr-xl-5 mr-lg-5 text-right">
                                             <span class="ft_11px-s"> 12:43 PM</span>
                                         </div>
                                     </div>
