--- a/favorite_player.html
+++ b/favorite_player.html
@@ -151,7 +151,7 @@
                 <div class="col-12 min_h_340px-s py-3">
                     <div class="row">
                         <div class="col-12 text-left py-2">
-                            <h2>Players <span> (50) </span> </h2>
+                            <h5><strong>Players</strong> <strong>(50)</strong> </h5>
                         </div>
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
                             <div class="card home_card br_25px-s">
