--- a/game_invitation.html
+++ b/game_invitation.html
@@ -147,7 +147,7 @@
                     <h1>
                         <Strong>Game Invitations</Strong>
                     </h1>
-                    <h4>Send or accept game invitations.</h4>
+                    <h4>Send or accept game Invitations.</h4>
                 </div>
                 <div class="col-md-7 col-12 justify-content-md-end mt-md-0 mt-4 d-flex align-self-center">
                     <a href="javascript:void(0)" role="button" class="btn bg-white br_10px-s mr-2 br_green_on_hover-s fs_18px-s active fg_light_grey-s py-3 outline_none-s w_h_216px_x_63px-s"><strong>Invitations</strong></a>
@@ -422,7 +422,7 @@
                                     </div>
                                     <div class="col-xl-10 col-9 px-0">
                                         <div class="row px-4">
-                                            <div class="col-xl-5 col-12 px-0">
+                                            <div class="col-xl-5 col-12">
                                                 <div class="text-white">
                                                     <h6 class="mb-0">Thamer</h6>
                                                     <span class=" opacity_4-s fs_11px-s">@thamermd</span>
@@ -688,8 +688,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js "></script>
     <script src="assets/js/calendar.js"></script>
     <script src="assets/js/calendar.min.js"></script>
-    <script src="assets/js/main.js"></script>
     <script src="https://unpkg.com/codeflask/build/codeflask.min.js"></script>
+    <script src="assets/js/main.js"></script>
     <!-- <script src="assets/js/main.js"></script> -->
     <script type="text/javascript">
         var config = `
