--- a/more.html
+++ b/more.html
@@ -216,7 +216,7 @@
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
                     <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
                         <div class="align-self-center">
-                            <h6 class="mb-0"><strong>APP Notification</strong></h6>
+                            <h6 class="mb-0"><strong>App Notifications</strong></h6>
                         </div>
                         <div class="align-self-center">
                             <label class="switch mb-0">
@@ -231,7 +231,7 @@
 
             <div class="row pt-5 px-xl-5">
                 <div class="col-12 fg_green-s">
-                    <h4 class=""><strong>More</strong></h4>
+                    <h4 class=""><strong>Other</strong></h4>
                 </div>
             </div>
             <div class="row pt-2 pb-5 px-xl-5">
