--- a/game_invitation.html
+++ b/game_invitation.html
@@ -484,7 +484,7 @@
                     <!--header image-->
                     <div class="row modal-header border-0 mt-4">
                         <div class="col-12 text-center">
-                            <img src="assets/images/invitation.svg" width="130" alt="send invitation">
+                            <img src="assets/images/accept_invitation.svg" width="130" alt="send invitation">
                         </div>
                     </div>
                     <!--header image end-->
@@ -493,7 +493,7 @@
                         <!--modal text-->
                         <div class="col-12 text-center">
                             <h4 class="fg_green-s">ACCEPT INVITATION</h4>
-                            <h6 class="mb-3"><strong>Are you sure you want to accept this invitation?</strong></h6>
+                            <h6 class="mb-3"><strong>Are you sure you want to accept invitation?</strong></h6>
                             <span class="opacity_4-s pt-2">Once you accept this invitation, all invitations will be declined during this time limit.</span>
                         </div>
                         <!--modal text end-->
@@ -603,7 +603,7 @@
                     <!--header image-->
                     <div class="row modal-header border-0 mt-4">
                         <div class="col-12 text-center">
-                            <img src="assets/images/invitation.svg" width="130" alt="send invitation">
+                            <img src="assets/images/cancel_invitation.svg" width="130" alt="send invitation">
                         </div>
                     </div>
                     <!--header image end-->
