--- a/home-sent-invitation.html
+++ b/home-sent-invitation.html
@@ -50,7 +50,7 @@
             <!-- .................Home Page Sent Invitation Section One Start ......................... -->
             <div class="container-fluid bg-white br_47px-s mh_86vh-s">
                 <div class="row pt-5 px-xl-5 px-3 ">
-                    <div class="col-lg-4 col-md-6 h_674px-s border br_15px-s border_grey-s">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-12 h_674px-s border br_15px-s border_grey-s">
                         <div class="container">
                             <div class="row pt-4">
                                 <div class="col-12">
@@ -254,7 +254,7 @@
                             </div>
                         </div> -->
                     </div>
-                    <div class="col-lg-4 col-md-6 mb-3">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-12 mb-3">
                         <div class="container">
                             <div class="row">
                                 <div class=" col-12 celender_bg">
@@ -293,25 +293,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 ">
+                    <div class="col-xl-4 col-lg-6 col-md-6 col-12">
                         <div class="container invitation_location-s d-flex ">
                             <div class=" location_card-s d-flex align-self-end pb-3 w-100">
                                 <div class="card w-100 br_10px-s">
-                                    <!-- <div class="container-fluid px-0"> -->
+                                    <div class="container-fluid px-0">
                                         <div class="row">
                                             <div class="col-4">
                                                 <img src="assets/images/Mask Group 3.svg" class="stadium_img" alt="" />
                                             </div>
-                                            <div class="col-8 my-3">
+                                            <div class="col-8 pl-xl-4 my-3">
                                                 <span class="fs_12px-s fg_green-s">Jaber Al-Ahmad INternational Stadium</span>
                                                 <div class="fs_9px-s pt-3">
-                                                    <img src="assets/images/Location.svg" alt="">
+                                                    <img src="assets/images/Location.svg" class="img-fluid" alt="">
                                                     <span>Sami Ahmad Al Munayes St, Al kuyawt, Kuwait.</span>
                                                 </div>
                                                 <button class="btn fg_green-s w_90-s bg_grey-s mt-4 fs_10px-s">SELECT</button>
                                             </div>
                                         </div>
-                                    <!-- </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
