--- a/post_modal.html
+++ b/post_modal.html
@@ -27,27 +27,48 @@
                                 <img src="assets/images/close-dark.svg" width="19" data-dismiss="modal" class="position-absolute img-fluid close_modal-s" alt="">
                             </div>
                             <div class="col-lg-6 col-12 pr-lg-0">
-                                <img src="assets/images/picture.jpg" class="img-fluid picture_border-s " alt="picture">
+                                <div>
+                                    <img src="assets/images/picture.jpg" class="img-fluid picture_border-s " alt="picture">
+                                </div>
+                                <div class="w-100 position-absolute caption-s text-white px-2">
+                                    <div class="row mx-xl-2 mx-lg-0 mx-3">
+                                        <div class="col-1 px-0">
+                                            <img src="assets/images/user_img.png" width="37" class="img-fluid rounded-circle border_green-s" alt="user profile">
+                                        </div>
+                                        <div class="col-lg-11 col-11  ">
+                                            <a href="javascript:void(0)" class="td_none-s">
+                                                <h6 class="fg_green-s mb-0"><strong>Ahmad</strong></h6>
+                                                <span class="fs_12px-s">@ahmad123</span>
+                                            </a>
+                                            <p class="fs_12px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-lg-6 col-12 mt-4">
-                                <div class="row mx-xl-2 mx-lg-0 mx-3">
-                                    <div class="col-1 px-0">
-                                        <img src="assets/images/user_img.png" width="37" class="img-fluid rounded-circle border_green-s" alt="user profile">
+                                <div class="row mx-xl-2 mx-lg-0 mx-2 mt-2">
+                                    <div class="col-6">
+                                        <h6 class="mb-0"><strong><span>20</span> people like this.</strong></h6>
+                                        <span class="fs_12px-s">2 days ago | 12:30 pm</span>
                                     </div>
-                                    <div class="col-lg-11 col-11  ">
-                                        <a href="javascript:void(0)" class="td_none-s">
-                                            <h6 class="fg_green-s mb-0"><strong>Ahmad</strong></h6>
-                                            <span class="fs_12px-s text-dark">@ahmad123</span>
+                                    <div class="col-6 d-flex justify-content-end align-self-center">
+                                        <a href="jaavscript:(0)" class=" px-2">
+                                        <img src="assets/images/like_black.svg" width="20" alt="like">
                                         </a>
-                                        <p class="fs_12px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                                        <a href="jaavscript:(0)" class=" px-2">
+                                            <img src="assets/images/share_black.svg" width="16" alt="share">
+                                        </a>
+                                        <a href="jaavscript:(0)" class=" pl-2">
+                                            <img src="assets/images/delete_icon.svg" width="16" alt="delete">
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 pl-0">
-                                        <hr class="mt-0">
+                                        <hr class="">
                                     </div>
                                 </div>
-                                <div class="container-fluid overflow-auto h_346px-s px-0">
+                                <div class="container-fluid overflow-auto h_452px-s px-0">
                                     <div class="row mx-xl-2 mx-lg-0 mx-3">
                                         <div class="col-1 px-0">
                                             <img src="assets/images/user_img.png" width="37" class="img-fluid rounded-circle border_green-s" alt="user profile">
@@ -111,41 +132,18 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12 pl-0">
-                                        <hr class="my-0">
+                                        <hr class="">
                                     </div>
                                 </div>
-                                <div class="row mx-xl-2 mx-lg-0 mx-2 my-3">
-                                    <div class="col-6">
-                                        <h6 class="mb-0"><strong><span>20</span> people like this.</strong></h6>
-                                        <span class="fs_12px-s">2 days ago | 12:30 pm</span>
-                                    </div>
-                                    <div class="col-6 d-flex justify-content-end align-self-center">
-                                        <a href="jaavscript:(0)" class=" px-1">
-                                        <img src="assets/images/like_black.svg" width="20" alt="like">
-                                        </a>
-                                        <a href="jaavscript:(0)" class=" px-1">
-                                            <img src="assets/images/share_black.svg" width="16" alt="share">
-                                        </a>
-                                        <a href="jaavscript:(0)" class=" pl-1">
-                                            <img src="assets/images/delete_icon.svg" width="16" alt="delete">
-                                        </a>
+                                    
+                                <div class="input-group word-break word-wrap border-0">
+                                    <textarea type="textarea" name="comment" placeholder="Add your comment....." class="comment-s form-control py-1 textarea_h_w-s ft_size_14px-s border-0 " id="add_comment-d"></textarea>
+                                    <div class="input-group-append">
+                                        <a class="border-0 bg-white  px-3 post-s td_none-s" href="javascript:void(0)"><strong class="fg_green-s">POST</strong></a>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-12 pl-0">
-                                        <hr class="my-0">
-                                    </div>
-                                </div>
-                                <div class="row mt-3">
-                                    <div class="col-12">
-                                        <div class="input-group word-break word-wrap border-0">
-                                            <textarea type="textarea" name="comment" placeholder="Add your comment....." class="comment-s form-control py-1 textarea_h_w-s ft_size_14px-s border-0 " id="add_comment-d"></textarea>
-                                            <div class="input-group-append">
-                                                <a class="border-0 bg-white  px-3 post-s td_none-s" href="javascript:void(0)"><strong class="fg_green-s">POST</strong></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                        
+                                </footer>
                             </div>
                         </div>
                     </div>
