fixes according to QA

--- a/favorite_player.html
+++ b/favorite_player.html
@@ -153,8 +153,9 @@
                         <div class="col-12 text-left py-2">
                             <h5><strong>Players</strong> <strong>(50)</strong> </h5>
                         </div>
+
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
-                            <div class="card home_card br_25px-s">
+                            <div class="card home_card card_bg_img-s br_25px-s">
                                 <div class="heart_icon">
                                     <i class="fa fa-heart fs_32px_heart-s" aria-hidden="true"></i>
                                 </div>
@@ -166,13 +167,13 @@
                                         <div class="col-lg-9 col-md-9 col-9 pl-0">
                                             <div class="text-white">
                                                 <h6 class="mb-0">Thamer</h6>
-                                                <span class=" opacity_4-s fs_12px-s">@thamermd</span>
-                                                <p class="fg_yellow-s mb-1">
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i> 5.0
+                                                <span class=" opacity_4-s fs_11px-s">@thamermd</span>
+                                                <p class="fg_yellow-s fs_11px-s mb-1">
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i> 5.0
                                                     <span class="rating_textt"> $10 </span>
                                                 </p>
                                             </div>
@@ -209,7 +210,7 @@
                                             </p>
                                         </div>
                                         <div class="col-6 pl-0">
-                                            <a class="td_none-s text-white fs_12px-s" href="Home/home-sent-invitation.html">
+                                            <a class="td_none-s text-white fs_12px-s" href="home-sent-invitation.html">
                                                 <span class="pull-right text-white"> send invitation >> </span>
                                             </a>
                                         </div>
@@ -217,6 +218,7 @@
                                 </div>
                             </div>
                         </div>
+
 
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 px-1">
                             <div class="card home_card br_25px-s">
@@ -232,12 +234,12 @@
                                             <div class="text-white">
                                                 <h6 class="mb-0">Thamer</h6>
                                                 <span class=" opacity_4-s fs_12px-s">@thamermd</span>
-                                                <p class="fg_yellow-s mb-1">
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o fs_11px-s" aria-hidden="true"></i> 5.0
+                                                <p class="fg_yellow-s fs_11px-s mb-1">
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i>
+                                                    <i class="fa fa-star fs_11px-s" aria-hidden="true"></i> 5.0
                                                     <span class="rating_textt"> $10 </span>
                                                 </p>
                                             </div>
