--- a/more.html
+++ b/more.html
@@ -33,7 +33,7 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around" id="nav_bar-d">
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link nav_link_active-d active" href="index.html">
+                                    <a class="nav-link nav_link_active-d" href="index.html">
                                         <img src="assets/images/home_icon.svg" class="img-fluid" alt="navbar_home" /> Home
                                     </a>
                                 </li>
