--- a/user_profile.html
+++ b/user_profile.html
@@ -264,25 +264,73 @@
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                                 <div class="hover">
-                                    <h2>Find out image</h2>
+                                    <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
+                                    <div class="d-flex w-100 justify-content-between ">
+                                        <div>
+                                            <span class="text-white fs_12px-s"><img class="w_20px-s mx-1" src="assets/images/like.svg" alt=""> 34</span>
+                                            <span class="text-white fs_12px-s ml-2"><img class="w_20px-s mx-1" src="assets/images/comment.svg" alt=""> 34</span>
+                                        </div>
+                                        <div class="d-flex">
+                                            <span class="text-white fs_12px-s"><img class="w_11px-s mx-1" src="assets/images/share_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_10px-s mx-1" src="assets/images/delete_white_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_20px-s mx-1 text-white" src="assets/images/view_icon.svg" alt=""></span>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                                 <div class="hover">
-                                    <h2>Find out image</h2>
+                                    <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
+                                    <div class="d-flex w-100 justify-content-between ">
+                                        <div>
+                                            <span class="text-white fs_12px-s"><img class="w_20px-s mx-1" src="assets/images/like.svg" alt=""> 34</span>
+                                            <span class="text-white fs_12px-s ml-2"><img class="w_20px-s mx-1" src="assets/images/comment.svg" alt=""> 34</span>
+                                        </div>
+                                        <div class="d-flex">
+                                            <span class="text-white fs_12px-s"><img class="w_11px-s mx-1" src="assets/images/share_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_10px-s mx-1" src="assets/images/delete_white_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_20px-s mx-1 text-white" src="assets/images/view_icon.svg" alt=""></span>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                                 <div class="hover">
-                                    <h2>Find out image</h2>
+                                    <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
+                                    <div class="d-flex w-100 justify-content-between ">
+                                        <div>
+                                            <span class="text-white fs_12px-s"><img class="w_20px-s mx-1" src="assets/images/like.svg" alt=""> 34</span>
+                                            <span class="text-white fs_12px-s ml-2"><img class="w_20px-s mx-1" src="assets/images/comment.svg" alt=""> 34</span>
+                                        </div>
+                                        <div class="d-flex">
+                                            <span class="text-white fs_12px-s"><img class="w_11px-s mx-1" src="assets/images/share_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_10px-s mx-1" src="assets/images/delete_white_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_20px-s mx-1 text-white" src="assets/images/view_icon.svg" alt=""></span>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2 home-img-block">
                                 <img src="assets/images/Mask Group 8.svg" class="img-fluid" alt="" />
                                 <div class="hover">
-                                    <h2>Find out image</h2>
+                                    <p class="profile_text_on_img_hover-s fs_12px-s">Find out image sdxsj nijdijd ijixciij hjiojoij</p>
+                                    <div class="d-flex w-100 justify-content-between ">
+                                        <div>
+                                            <span class="text-white fs_12px-s"><img class="w_20px-s mx-1" src="assets/images/like.svg" alt=""> 34</span>
+                                            <span class="text-white fs_12px-s ml-2"><img class="w_20px-s mx-1" src="assets/images/comment.svg" alt=""> 34</span>
+                                        </div>
+                                        <div class="d-flex">
+                                            <span class="text-white fs_12px-s"><img class="w_11px-s mx-1" src="assets/images/share_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_10px-s mx-1" src="assets/images/delete_white_icon.svg" alt=""></span>
+                                            <span class="text-white fs_12px-s ml-1"><img class="w_20px-s mx-1 text-white" src="assets/images/view_icon.svg" alt=""></span>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
