--- a/hire_Players.html
+++ b/hire_Players.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' />
 
     <link rel="stylesheet" href="assets/css/main.css" />
 
@@ -33,7 +34,7 @@
                             <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
                                 <li class="nav-item ml-lg-0 ml-2">
                                     <a class="nav-link pl-lg-0" href="index.html">
-                                        <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
+                                        <span><img src="assets/images/home_icon.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -144,7 +145,7 @@
                 </div>
                 <div class="col-md-7 col-12 justify-content-md-end mt-md-0 mt-4 d-flex align-self-center">
                     <a href="game_invitation.html" role="button" class="btn bg-white br_10px-s mr-2 br_green_on_hover-s fs_18px-s fg_light_grey-s py-3 w_h_216px_x_63px-s"><strong>Invitations</strong></a>
-                    <a href="hire_Players.html" class="btn bg-white br_10px-s ml-2 br_green_on_hover-s fg_light_grey-s fs_18px-s py-3 w_h_216px_x_63px-s"><strong>Hire Players</strong></a>
+                    <a href="hire_Players.html" class="btn bg-white br_10px-s ml-2 br_green_on_hover_active-s fg_light_grey-s fs_18px-s py-3 w_h_216px_x_63px-s"><strong>Hire Players</strong></a>
                 </div>
             </div>
         </div>
