--- a/edit_profile.html
+++ b/edit_profile.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
-                            <label for="last_name-d"><strong><h6>LAST NAME</h6></strong></label>
+                            <label for="last_name-d"><strong><h6>SUR NAME</h6></strong></label>
                             <input type="text" class="form-control fs_14px-s form-control-lg last_name-t rounded" value="Jamele" id="last_name-d" placeholder="Last Name">
                         </div>
                     </div>
