--- a/more.html
+++ b/more.html
@@ -161,9 +161,9 @@
                 </div>
             </div>
             <div class="row pt-2 pb-5 px-xl-5">
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
+                <div class="col-12 my-3">
                     <a class="td_none-s" href="edit_profile.html">
-                        <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
                             <div class="align-self-center">
                                 <h6 class="mb-0"><strong>Edit Personal Profile</strong></h6>
                             </div>
@@ -173,8 +173,8 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
-                    <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between" data-toggle="modal" data-target="#update_phone_num_modal-d">
+                <div class=" col-12 my-3">
+                    <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between" data-toggle="modal" data-target="#update_phone_num_modal-d">
                         <div class="align-self-center">
                             <h6 class="mb-0"><strong>Update Phone Number</strong></h6>
                         </div>
@@ -183,8 +183,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
-                    <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between" data-toggle="modal" data-target="#update_password_modal-d">
+                <div class="col-12 my-3">
+                    <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between" data-toggle="modal" data-target="#update_password_modal-d">
                         <div class="align-self-center">
                             <h6 class="mb-0"><strong>Update Password</strong></h6>
                         </div>
@@ -193,8 +193,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3" data-toggle="modal" data-target="#update_email_modal-d">
-                    <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                <div class="col-12 my-3" data-toggle="modal" data-target="#update_email_modal-d">
+                    <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
                         <div class="align-self-center">
                             <h6 class="mb-0"><strong>Update Email</strong></h6>
                         </div>
@@ -206,13 +206,13 @@
 
             </div>
 
-            <div class="row pt-5 px-xl-5">
+            <div class="row  px-xl-5">
                 <div class="col-12 fg_green-s">
                     <h4 class=""><strong>Notifications</strong></h4>
                 </div>
             </div>
 
-            <div class="row pt-2 pb-5 px-xl-5">
+            <div class="row pt-3 pb-5 px-xl-5">
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
                     <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
                         <div class="align-self-center">
@@ -229,15 +229,15 @@
                 </div>
             </div>
 
-            <div class="row pt-5 px-xl-5">
+            <div class="row pt-2  px-xl-5">
                 <div class="col-12 fg_green-s">
                     <h4 class=""><strong>More</strong></h4>
                 </div>
             </div>
             <div class="row pt-2 pb-5 px-xl-5">
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
+                <div class="col-12 my-3">
                     <a class="td_none-s" href="term_and_condition.html">
-                        <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
                             <div class="align-self-center">
                                 <h6 class="mb-0"><strong>Terms & Conditions</strong></h6>
                             </div>
@@ -247,9 +247,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
+                <div class="col-12 my-3">
                     <a class="td_none-s" href="help.html">
-                        <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
                             <div class="align-self-center">
                                 <h6 class="mb-0"><strong>Help</strong></h6>
                             </div>
@@ -259,9 +259,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-xl-3 col-lg-4 col-md-6 col-12 pt-3">
+                <div class=" col-12 my-3">
                     <a class="td_none-s" href="about_us.html">
-                        <div class="d-flex bg_grey-s py-3 px-3 br_10px-s text-dark justify-content-between">
+                        <div class="d-flex bg_grey-s py-4 px-3 br_10px-s text-dark justify-content-between">
                             <div class="align-self-center">
                                 <h6 class="mb-0"><strong>About Us</strong></h6>
                             </div>
