--- a/football_login1.html
+++ b/football_login1.html
@@ -25,9 +25,9 @@
 
             <!--nav bar start-->
             <div class="col-xl-5 col-6">
-                <nav class="navbar navbar-expand-xl navbar-light px-lg-0">
+                <nav class="navbar navbar-expand-xl navbar-light px-0">
                     <!--toggler menu button for medium screen-->
-                    <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler border-0 p-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
@@ -111,14 +111,14 @@
                     <h1 class="fg_light_green-s fs_39px_on_sm-s">FOOTBALL PLAYERS</h1>
                 </div>
                 <div>
-                    <h5 class="text-right">based on position</h5>
+                    <h5 class="text-right fs_15px-s">based on position</h5>
                 </div>
                 <div class="row ">
                     <div class="col-4 offset-8">
                         <hr class="bg-white opacity_4-s">
                     </div>
                     <div class="col-6 offset-6">
-                        <h6 class="opacity_60-s text-right">OR BUY GEAR FOR PLAYERS</h6>
+                        <h6 class="opacity_60-s text-right fs_15px-s">OR BUY GEAR FOR PLAYERS</h6>
                     </div>
                 </div>
             </div>
