--- a/more.html
+++ b/more.html
@@ -518,7 +518,7 @@
                         <div class="col-12 px-4">
                             <form action="">
                                 <div class="form-group pt-3">
-                                    <label for="email-d" class=""><strong>Email</strong></label>
+                                    <label for="email-d" class=""><strong>EMAIl</strong></label>
                                     <input type="email" name="email" placeholder="Enter your email" id="email-d" class="form-control rounded form-control-xl py-4 email-t">
                                 </div>
                                 <div class="form-group pt-3">
@@ -730,7 +730,7 @@
                         <div class="col-12 px-4">
                             <form action="">
                                 <div class="form-group pt-3">
-                                    <label for="email-d" class=""><strong>Email</strong></label>
+                                    <label for="email-d" class=""><strong>EMAIl</strong></label>
                                     <input type="email" name="email" placeholder="Enter your email" id="email-d" class="form-control rounded form-control-xl py-4 email-t">
                                 </div>
                             </form>
